<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/userapp"
            android:icon="@drawable/user"
            android:title="@string/usr" />

        <item
            android:id="@+id/rateus"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/mn_rateus" />

        <item
            android:id="@+id/sharethisapp"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/mn_sharethisapp" />

        <item
            android:id="@+id/moreapp"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/mn_moreapp" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/mn_feedback" />

        <item
            android:id="@+id/quit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/mn_exit" />
    </group>

</menu>